Add 'Afspraken' document and update project structure to include it in navigation

--- a/book/ml_principles/basis/training.ipynb
+++ b/book/ml_principles/basis/training.ipynb
@@ -39,11 +39,46 @@
     "In die complexiteit zit vaak ook nog het feit dat er verdere keuzes moeten gemaakt worden met betrekking tot de _specifieke configuratie van het algorithme zelf_.\n",
     "Bij iteratieve methodes, bijvoorbeeld, waarin er stapsgewijs gezocht wordt naar een optimale waarde, moeten we een keuze maken over de grootte van die stappen (de zogenaamde _learning rate_).  \n",
     "Die configuratie kan een grote impact hebben op de kwaliteit van het uiteindelijke resultaat. Het is vaak op voorhand ook niet duidelijk welke de beste configuratie voor het optimalisatie algorithme is, gegeven de specifieke situatie. Daarom wordt ook daar vaak op een (al dan niet principiële manier) iteratief gewerkt om tot optimale waarden te komen.  \n",
-    "**De numerieke configuratie parameters van een optimalisatiealgorithme worden _hyper parameters_ genoemd. Het process waarbij de hyper parameters worden geoptimaliseerd heeft _hyper parameter tuning_.**\n",
+    "**De numerieke configuratie parameters van een optimalisatiealgorithme worden _hyper parameters_ genoemd. Het process waarbij de hyper parameters worden geoptimaliseerd heeft _hyper parameter tuning_.**  \n",
+    "  \n",
+    ":::{note} 🌍\n",
+    ":icon: false\n",
+    ":class: simple \n",
+    "Veronder stel dat we voor ons eenvoudigste model voor de airco temperatuur drempelwaarde het volgende naïeve algorithme zouden gebruiken in plaats van het sample gemiddelde:\n",
+    "- We starten met een berekende gok, bv. $\\hat{b_0} = 18$\n",
+    "- Van zodra de eerste observatie gemaakt wordt, bv. $d_0 = 25$, willen we onze initiële schatting updaten, maar we willen uiteraard niet gewoon de geobserveerde waarde overnemen.\n",
+    "- We kiezen voor de techniek van _expontial smoothing_ waarbij we op ieder moment een gewogen gemiddelde nemen tussen onze schatting van dat moment $\\hat{b_i}$ en de nieuwe observatie $d_i$.\n",
+    "$$\n",
+    "\\hat{b_{i+1}} = \\hat{b_i}*\\alpha + d_i*(1-\\alpha) \\\\\n",
+    "0 > \\alpha > 1\n",
+    "$$\n",
+    "\n",
+    "Hieronder visualiseren we dit voor verschillende waarden voor $\\hat{b_0}$ en $\\alpha$.\n",
+    ":::\n",
+    "\n",
+    ":::{note} 🌍\n",
+    ":icon: false\n",
+    ":class: simple\n",
+    "In dit algorithme spreken we dus over 2 **hyper parameters**: $\\hat{b_0}$ en $\\alpha$. De keuze daarvan heeft duidelijk drastische gevolgen voor de convergentie van het leerprocess.\n",
+    "Als we op een bepaald moment de schatting van de model parameter $\\hat{b}$ willen vastzetten (zgn. _parameter freezing_), kunnen het algorithme ook uitbreiden met een zgn. _stopping rule_.\n",
+    "Die regel bepaald de voorwaarde om de updates te stoppen. Dat kan heel simpel door toevoeging van een hyper parameter die het maximum aantal updates bepaalt of door bijvoorbeeld een limiet te zetten op de _online_ update variantie (bv. [](https://doi.org/10.2307%2F1266577))\n",
+    ":::\n",
     "\n",
     "### Supervisie\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a22b2fce",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
