Update lifecycle and training notebooks with formatting improvements

--- a/book/ml_principles/basis/lifecycle.ipynb
+++ b/book/ml_principles/basis/lifecycle.ipynb
@@ -5,7 +5,9 @@
    "id": "06e9c32c",
    "metadata": {},
    "source": [
-    "# Machine Learning Life Cycle"
+    "# Machine Learning Life Cycle\n",
+    "\n",
+    "🚧"
    ]
   }
  ],
