--- a/book/ml_principles/basis/ml.ipynb
+++ b/book/ml_principles/basis/ml.ipynb
@@ -6,7 +6,7 @@
             "metadata": {},
             "source": [
                 "# Machine Learning\n",
-                "Machine learning (of machinaal leren; ML) is een specifieke benadering binnen de artificiële intelligentie (AI). De focus ligt op wiskundige algorithmes om complexe patronen in **data** te **leren** herkennen en/of te reproduceren. De bedoeling is om software systemen te creeren die **voorspellingen** kunnen maken en/of **acties** kunnen ondernemen **zonder expliciete instructies te programmeren**.  \n",
+                "Machine learning (of machinaal leren; ML) is een specifieke benadering binnen de artificiële intelligentie (AI). De focus ligt op wiskundige algorithmes om complexe patronen/structuren in **data** te **leren** herkennen en/of te reproduceren. De bedoeling is om software systemen te creeren die **voorspellingen** kunnen maken en/of **acties** kunnen ondernemen **zonder expliciete instructies te programmeren**.  \n",
                 "  \n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
@@ -25,7 +25,7 @@
                 "1. Model training\n",
                 "2. Model inference\n",
                 "\n",
-                "Om die goed te begrijpen, moeten we eerst het concept van een **machine learning model** toelichten.\n",
+                "Om die goed te begrijpen, moeten we eerst het concept van een **machine learning _model_** toelichten.\n",
                 "\n",
                 "\n",
                 ":::{tip} ML & AI\n",
