--- a/book/ml_principles/basis/inference.ipynb
+++ b/book/ml_principles/basis/inference.ipynb
@@ -5,7 +5,9 @@
    "id": "27080f91",
    "metadata": {},
    "source": [
-    "# Inference"
+    "# Inference\n",
+    "\n",
+    "🚧"
    ]
   }
  ],
