--- a/book/ml_principles/basis/training.ipynb
+++ b/book/ml_principles/basis/training.ipynb
@@ -147,10 +147,10 @@
     "De _Loss_ functie is ook gekend onder de namen _Error_ functie en _Cost_ functie. Er wordt in de domeinen van de wiskundige optimalisatie en beslissingstheorie ook soms gesproken over een _objectieve functie_.\n",
     "Die verwijst ofwel naar een verliesfunctie of zijn tegengestelde vorm. Dan wordt er bijvoorbeeld ook gesproken over een _reward_ functie, _profit_ functie, _utility_ functie, _fitness_ functie, enz.\n",
     "  \n",
-    "Bij het zoeken naar de optimale waarden voor de parameters in ons model, moeten we wiskundig kunnen uitdrukken wat _optimaliteit_ in een specifiek geval betekent om de _goodness of fit_ van de oplossing te kunnen uitdrukken - met andere woorden, we moeten de _optimaliteit_ van parameterschattingen op ieder momenent in een cijfer kunnen uitdrukken (kwantificeren). We moeten dus een functie beschrijven die optimaliteit uitdrukt. Het doel van het optimalisatie algorithme is om de output van die functie te maximaliseren.  \n",
+    "Bij het zoeken naar de optimale waarden voor de parameters in ons model _en/of_ om te evalueren of het leeralgorithme effectief tot _leren_ leidt, moeten we wiskundig kunnen uitdrukken wat _optimaliteit_ in een specifiek geval betekent om de _goodness of fit_ van de oplossing te kunnen uitdrukken - met andere woorden, we moeten de _optimaliteit_ van parameterschattingen op ieder momenent in een cijfer kunnen uitdrukken (kwantificeren). We moeten dus een functie beschrijven die optimaliteit uitdrukt. Het doel van het optimalisatie algorithme is om de output van die functie te maximaliseren.  \n",
     "❗Om wiskundige redenen (die in de Mathematical Foundations cursus aan bod komen), draaien we de logica echter om en beschrijven we een functie die de _sub-optimaliteit_ uitdrukt. Die functie trachtten we dan te _minimaliseren_.  \n",
     "  \n",
-    "**De _Loss_ functie is de wiskundige functie die de _sub-optimaliteit_ uitdrukt van parameterschattingen in een bepaalde context. Het doel van het optimalisatie-algorithme is om de output van die functie te _minimaliseren_.**\n",
+    "**De _Loss_ functie is de wiskundige functie die de _sub-optimaliteit_ uitdrukt van parameterschattingen in een bepaalde context. Het doel van het optimalisatie-algorithme is om de output van die functie te _minimaliseren_.** Zoals we nog zullen illustreren, betekent dit niet per se dat het leeralgorithme rechtstreeks gebruik maakt van de _Loss_ functie.\n",
     "\n",
     ":::{note} 🌍\n",
     ":icon: false\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b8a7d89a",
    "metadata": {},
    "outputs": [
@@ -239,16 +239,6 @@
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4b959de",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "\n"
    ]
   }
  ],
