--- a/book/ml_principles/basis/algorithmes.ipynb
+++ b/book/ml_principles/basis/algorithmes.ipynb
@@ -5,12 +5,62 @@
    "id": "ee540987",
    "metadata": {},
    "source": [
-    "# Evaluatie\n",
+    "# Algorithmes\n",
+    "[^Goodfellow_et_al]\n",
+    "[^Goodfellow_et_al]: Deze sectie is gebaseerd op [Goodfellow et al. (2016)](https://www.deeplearningbook.org/) (96-107).\n",
     "\n",
-    "Er zijn drie grote categorieën of types leeralgortimes: **_supervised_**, **_unsupervised_** en **_reinforcement learning_**. Ze verschillen van elkaarnaargelang de manier waarop op een gegeven moment (tijdens of na het trainen) model outputs _geëvalueerd_ worden. De **model output heeft betrekking op de specifieke predicties en/of acties die op basis van het model gemaakt zullen worden**.\n",
+    "Een machine learning algorithme is een algorithme dat kan leren van data. Maar wat verstaan we juist onder \"**leren**\"?  \n",
+    "  \n",
+    "_“A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P , if its performance at tasks in T , as measured by P , improves with experience E.”_ [Mitchell (1997)](https://www.cs.cmu.edu/~tom/files/MachineLearningTomMitchell.pdf)  \n",
+    "  \n",
+    "Vrij vertaald:  \n",
+    "**Er wordt gezegd dat een computerprogramma leert van ervaring _E_ met betrekking tot een bepaalde klasse van taken _T_ en een prestatiemaat _P_, als zijn prestatie op taken in _T_, gemeten door _P_, verbetert met ervaring _E_.**\n",
     "\n",
-    "### _Supervised learning_\n",
-    "**Bij _supervised learning_ is er op ieder moment rechstreekse feedback over de _gewenste_ model output**. In de training data zijn zogenaamde **ground truth values** aanwezig. Die rechtstreekse feedback laat toe om de _afstand_ te berekenen tussen de huidige model output bij een gegeven input en de _target output_. Er is dus een **individuele** en **onmiddellijke evaluatie** van de model outputs.\n",
+    "### Taken, _T_\n",
+    "De taak is wat het machine learning model uiteindelijk moet kunnen doen. Dat zijn meer specifiek taken die te complex zijn om op te lossen met een vaste programmeerbare logica.\n",
+    "Vaak voorkomende taken zijn:\n",
+    "#### Klassificatie (_Classification_)\n",
+    "Bij klassificatie is het de bedoeling om discrete labels toe te wijzen aan data. Denk aan het labelen van e-mails als \"spam\" of \"geen spam\", of het herkennen van verschillende soorten dieren/voorwerpen op foto's.  \n",
+    "  \n",
+    "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_classifier_comparison_001.png)](https://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html#sphx-glr-auto-examples-classification-plot-classifier-comparison-py)  \n",
+    "#### Regressie\n",
+    "Hier is het doel om een continue, numerieke waarde te voorspellen. Voorbeelden zijn het voorspellen van huizenprijzen, aankomsttijden (ETA's), de temperatuur van morgen of de aandelenkoers.  \n",
+    "  \n",
+    "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_tree_regression_001.png)](https://scikit-learn.org/stable/modules/tree.html#regression)\n",
+    "#### Transcriptie\n",
+    "Bij dit type taak moet het model (relatief) ongestructureerde data vertalen naar een discrete, tekstuele vorm. Bijvoorbeeld, bij _optical character recognition_ krijgt het computerprogramma een foto met een afbeelding van geschreven of getypte tekst te zien en wordt het gevraagd deze tekst terug te geven in de vorm van een reeks karakters. _Speech-to-text_ behoren ook tot dit type.  \n",
+    "  \n",
+    "[![Hugging Face Spaces](https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-Spaces-blue)](https://huggingface.co/spaces/openai/whisper)\n",
+    "#### Automatische vertaling\n",
+    "Dit is een klassieke taak binnen het domein van _Natural Language Processing (NLP)_ waarbij tekst uit de ene natuurlijke taal naar de andere vertaald moet worden.\n",
+    "#### Clustering\n",
+    "Het groeperen van vergelijkbare data-punten. Denk aan het groeperen van klanten in segmenten op basis van hun koopgedrag.   \n",
+    "\n",
+    "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_kmeans_digits_001.png)](https://scikit-learn.org/stable/auto_examples/cluster/plot_kmeans_digits.html#visualize-the-results-on-pca-reduced-data) \n",
+    "#### Dimensionaliteitsreductie\n",
+    "In bepaalde toepassingen willen we het model gebruiken om hoog-dimensionele data (met veel features in de kolommen van $\\pmb{X}$) _compresseren_ in een lager dimensionele ruimte _met behoudt van relevante afstanden tussen de data in de originele ruimte_ (waarbij afstand op veel verschillende wiskundige manieren gedefinieerd kan zijn).  \n",
+    "  \n",
+    "[![](../../../img/tf_projector_mnist.png)](https://projector.tensorflow.org/)\n",
+    "#### Anomaliedetectie\n",
+    "In deze taak is het de bedoeling om in een reeks events of objecten ongewone of atypische voorbeelden te detecteren. Een voorbeeld is het detecteren van kredietkaartfraude. Door iemands gewoonlijke aankoopgedrag te modelleren, kunnen banken bij plotse afwijkingen misbruik detecteren (en bv. kaarten blokkeren).\n",
+    "\n",
+    "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_anomaly_comparison_001.png)](https://scikit-learn.org/stable/auto_examples/miscellaneous/plot_anomaly_comparison.html)\n",
+    "#### Generatie\n",
+    "Het voorbije decennium hebben we een enorme doorbraak gekend van zogenaamde _generatieve modellen_, zowel in het domein van beeld als van (natuurlijke en programeer-)talen.\n",
+    "  \n",
+    "[![](https://docs.pytorch.org/tutorials/_images/sphx_glr_dcgan_faces_tutorial_003.png)](https://docs.pytorch.org/tutorials/beginner/dcgan_faces_tutorial.html)\n",
+    "\n",
+    "#### Actie planning\n",
+    "Bij deze taak is het de bedoeling om optimale _sequenties_ van model outputs te leren, met het oog op een bepaald doel.\n",
+    "\n",
+    "[![](https://docs.pytorch.org/tutorials/_images/mario.gif?raw=true)](https://docs.pytorch.org/tutorials/intermediate/mario_rl_tutorial.html)\n",
+    "\n",
+    "### Ervaring, _E_\n",
+    "\n",
+    "Afhankelijk van de manier waarop ervaring kan opgedaan worden tijdens het leerproces, zijn drie grote families leeralgortimes: **_supervised_**, **_unsupervised_** en **_reinforcement learning_**. Meer specifiek, verschillen ze van elkaar naargelang de manier waarop het leerproces gestuurd wordt richting de gewenste _model outputs_. De **model output heeft betrekking op de specifieke predicties en/of acties die op basis van het model gemaakt zullen worden**.\n",
+    "\n",
+    "#### _Supervised learning_\n",
+    "**Bij _supervised learning_ is het de bedoeling dat het model leert om, bij een gegeven input, een specifieke output te geven die vooraf bepaald is**. In de training data zijn zogenaamde **ground truth values/labels** aanwezig. Die geven voor iedere individuele set van input features aan wat de gewenste (_target_) output is. _Ground truth_ data verzamelen/bepalen vraagt soms een aanzienlijke (soms 100% manuele) inspanning. Dat proces wordt **data annotatie genoemd**. _Supervised learning_ is vaak heel efficiënt omdat, tijdens het trainen, aan iedere individuele output een score toegekend kan worden van waaruit een \"richting\" kan worden afgeleid in de zoektocht naar optimale parameterwaarden (zie Mathematical Foundations). Meer algemeen gesteld, kan er dus rechtstreeks geleerd (of ervaring opgedaan) worden over wat de gewenste model output moet zijn bij een bepaalde input.   \n",
     "  \n",
     ":::{note} 🌍 _Airco_\n",
     ":icon: false\n",
@@ -22,7 +72,7 @@
     ":::{note} 🌍 _CIFAR-10_\n",
     ":icon: false\n",
     ":class: simple\n",
-    "In de context van computer vision, is _supervised_ learning lange tijd de gouden standaard geweest.\n",
+    "In de context van computer vision, is _supervised_ learning nog steeds de gouden standaard.\n",
     "Een populaire publieke dataset in die context is de [CIFAR-10](https://www.cs.toronto.edu/~kriz/cifar.html) dataset.\n",
     "De dataset bestaat uit RGB foto's met een resolutie van 32x32 pixels voor 10 categorieën (of **klassen**): ‘airplane’, ‘automobile’, ‘bird’, ‘cat’, ‘deer’, ‘dog’, ‘frog’, ‘horse’, ‘ship’, ‘truck’.  \n",
     "De bedoeling is om een ML model te ontwikkelen dat toelaat om, bij een willekeurige nieuwe foto (met resolutie 32x32), te beslissen of het om één van de gegeven _classes_ gaat. \n",
@@ -34,6 +84,8 @@
     "J_{SSE}(f(\\pmb{x}); \\pmb{y}) = \\sum_{i=1}^M(y_i-f(x_i))^2\n",
     "$$\n",
     "waarbij $y_i$ de numerieke feature voor de **ground truth** labels ‘airplane’, ‘automobile’, ‘bird’, ‘cat’, ‘deer’, ‘dog’, ‘frog’, ‘horse’, ‘ship’, ‘truck’ of ‘unknown’ voorstelt en $f(x_i)$ de eigenlijke model ouput.\n",
+    "  \n",
+    "Wanneer we dieper ingaan op _computer vision_ als toepassingsdomein zullen we zien dat in recente modellen, training nog steeds via _supervised_ learning gebeurt, maar meer en meer door _self-supervision_ in plaats van (kostelijke) voorafgaande annotatie.\n",
     ":::"
    ]
   },
@@ -127,15 +179,15 @@
    "id": "12e540f1",
    "metadata": {},
    "source": [
-    "### _Unsupervised learning_\n",
+    "#### _Unsupervised learning_\n",
     "\n",
-    "**Bij _unsupervised learning_ is er op voorhand géén informatie beschikbaar over de gewenste model output bij een gegeven input**. Het is niet mogelijk om parameterwaarden te optimaliseren aan de hand van een _Loss_ functie die de ouput van het model rechstreeks vergelijkt met de gewenste output (_targets_). Het leeralgortime is gebaseerd op _pure blootstelling aan de training data_ en heeft als doel om (multi-dimensionele) inputs te vertalen naar éénvoudigere structureren. Die structuur blijft _ongelabeled_; de interpretatie (betekenis) van de structuur is geen onderdeel van de model output. De model outputs worden dus **niet individueel** geëvalueerd binnen de _Loss_ functie. Er worden wel _Loss_ functies gebruikt, maar die worden niet per se rechstreeks gebruikt bij de zoektocht naar optimale parameterwaarden. Een klassiek voorbeeld zijn _Kohonen's Self-Organizing Maps (SOM)_ een specifieke vorm van _competitief leren_.  \n",
+    "**Bij _unsupervised learning_ is ervaring gebasseerd op pure blootstelling aan data**. In tegenstelling tot _supervised learning_, is er op voorhand géén informatie beschikbaar over de gewenste model output bij een gegeven input. Het is niet mogelijk om parameterwaarden te optimaliseren aan de hand van scores die het verschil uitdrukken tussen de ouput van het model en de gewenste output (_targets_). Het leeralgortime heeft als doel om (multi-dimensionele) inputs te vertalen naar éénvoudigere structureren. Die structuren blijven _ongelabeled_; de interpretatie (betekenis) van de structuur is geen onderdeel van de model output. Een klassiek voorbeeld zijn _Kohonen's Self-Organizing Maps (SOM)_ een specifieke vorm van _competitief leren_.  \n",
     "\n",
-    ":::{note} 🌍 RGB Clustering\n",
+    ":::{note} 🌍 2D Kleurkaart\n",
     ":icon: false\n",
     ":class: simple\n",
     "\n",
-    "Hier demonstreren we het principe van __unsupervised learning__ met behulp van een _Kohonen Self-Organizing Map (SOM)_. We zullen zien dat we aan de hand van een _competitief leeralgorithme_ een model kunnen trainen dat kleuren kan indelen in \"families\" zonder enige voorafgaande kennis. Om de optimaliteit van de oplossing tijdens het trainen te evalueren zullen we gebruik maken van een specifieke _Loss_ functie: de _quantization error_. Het leeralgorithme zelf maakt echter geen gebruik van deze functie.\n",
+    "Hier demonstreren we het principe van __unsupervised learning__ met behulp van een _Kohonen Self-Organizing Map (SOM)_. We zullen zien dat we aan de hand van een _competitief leeralgorithme_ een model kunnen trainen dat een 3D kleurruimte (RGB) vertaalt naar een 2D kleurkaart (waarbij de originele afstand tussen kleuren in 3D zoveel mogelijk behouden blijft). Het gaat dus om dimensionaliteitsreductie als taak. Om de performantie van de oplossing  te scoren zullen we gebruik maken van de _quantization error_. Merk op dat er geen _Loss_ functie gebruikt wordt tijdens het trainen.\n",
     "\n",
     "1. Data Generatie\n",
     "\n",
@@ -212,11 +264,11 @@
    "id": "46b3d3e6",
    "metadata": {},
    "source": [
-    ":::{note} 🌍 RGB Clustering\n",
+    ":::{note} 🌍 2D Kleurkaart\n",
     ":icon: false\n",
     ":class: simple\n",
     "\n",
-    "2. Het Kohonen Netwerk (SOM) en de _Loss_ Functie\n",
+    "2. Het Kohonen Netwerk (SOM)\n",
     "\n",
     "Een Kohonen-netwerk is een _grid_ van artificiële neuronen. Elk neuron heeft een gewichtsvector met dezelfde dimensie als de invoergegevens. In ons geval is de gewichtsvector van elk knooppunt een array met 3 elementen die een RGB-kleur vertegenwoordigt. De gewichtvectoren van alle neuronen vormen de parameters van het model.\n",
     "\n",
@@ -246,7 +298,7 @@
     "- Competitie: Voor elke invoerkleur uit onze dataset zoekt het netwerk het neuron waarvan de gewichtsvector het meest vergelijkbaar is. Dit \"winnende\" neuron wordt de _Best Matching Unit (BMU)_ genoemd. De gelijkenis wordt doorgaans gemeten met de Euclidische afstand.\n",
     "- Adaptatie: De gewichtsvector van de BMU wordt bijgewerkt om nog meer op de invoerkleur te lijken. De buren op het _grid_ worden ook bijgewerkt, maar in mindere mate. Dit is het \"zelforganiserende\" deel, omdat het aangrenzende neuronen aanmoedigt om vergelijkbare kleuren te representeren.\n",
     "\n",
-    "De _Loss_ functie die hier wordt gebruikt us _quantization error (QE)_ De QE is de gemiddelde afstand tussen elke invoervector en de gewichtsvector van zijn BMU. Het kwantificeert hoe getrouw de _map_ de invoergegevens representeert.\n",
+    "De performantie van het leeproces wordt afgetoest aan de _quantization error (QE)_ De QE is de gemiddelde afstand tussen elke invoervector en de gewichtsvector van zijn BMU. Het kwantificeert hoe getrouw de _map_ de invoergegevens representeert.\n",
     "\n",
     "De formule is:\n",
     "$$\n",
@@ -358,11 +410,11 @@
    "id": "04659229",
    "metadata": {},
    "source": [
-    ":::{note} 🌍 RGB Clustering\n",
+    ":::{note} 🌍 2D Kleurkaart\n",
     ":icon: false\n",
     ":class: simple\n",
     "\n",
-    "3. Visualisatie getrained netwerk\n",
+    "3. Visualisatie kleurkaart\n",
     ":::"
    ]
   },
@@ -407,10 +459,13 @@
    "id": "63445178",
    "metadata": {},
    "source": [
-    "### Reinforcement learning\n",
-    "Bij _reinforcement learning_ is er, zoals bij _unsupervised learning_ **geen rechstreekse evaluatie** van individuele model outputs. Er is echter wel een **onrechstreekse evaluatie onder de vorm van een zgn. _reward_ functie**. Deze familie van leeralgorithmes wordt gebruikt in de context van **actie-planning** toepassingen waarbij model outputs de vorm hebben van **sequentiële acties** binnen een al dan niet gesimuleerde **omgeving**. Er wordt _geen_ rechstreekse evaluatie gedaan van actie-sequenties ten op zichte van overeenkomstige targets, maar de uitkomst van actie-sequenties wordt wel gescoord ten op zichte van vooraf gedefiniëerde doelstellingen binnen de omgeving. Die scoring gebeurt via de _reward_ functie. In het hoofdstuk over Robotics zullen we dieper ingaan op verschillende vormen van [_reinforcement learning_](https://docs.pytorch.org/tutorials/intermediate/reinforcement_q_learning.html).  \n",
+    "#### Reinforcement learning\n",
+    "Bij _reinforcement learning_ is er, zoals bij _unsupervised learning_ **geen rechstreekse informatie** over iedere model output. Er is echter wel een **onrechstreekse inschatting van de wenselijkheid van een individuele output onder de vorm van een zgn. _reward_ functie**. Deze familie van leeralgorithmes wordt gebruikt in de context van **actie-planning** taken toepassingen waarbij model outputs de vorm hebben van **sequentiële acties** binnen een al dan niet gesimuleerde **omgeving**. Er wordt _geen_ rechstreekse evaluatie gedaan van actie-sequenties ten op zichte van overeenkomstige targets, maar de uitkomst van actie-sequenties wordt wel gescoord ten op zichte van vooraf gedefiniëerde doelstellingen binnen de omgeving. Die scoring gebeurt via de _reward_ functie. In het hoofdstuk over Robotics zullen we dieper ingaan op verschillende vormen van [_reinforcement learning_](https://docs.pytorch.org/tutorials/intermediate/reinforcement_q_learning.html).  \n",
     "  \n",
-    "![Mario-playing RL agent](https://docs.pytorch.org/tutorials/_images/mario.gif?raw=true)\n"
+    "[![](https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/unit1/RL_process_game.jpg)](https://huggingface.co/learn/deep-rl-course/en/unit1/rl-framework)\n",
+    "\n",
+    "### Performantiemaat, _P_\n",
+    "🚧"
    ]
   }
  ],
